--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "gulp bundle",
     "clean": "gulp clean",
-    "test": "gulp test"
+    "test": "gulp test",
+    "serve": "fast-serve"
   },
   "dependencies": {
     "@fluentui/react": "^8.106.4",
@@ -38,6 +39,7 @@
     "eslint": "8.7.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "gulp": "4.0.2",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "spfx-fast-serve-helpers": "~1.18.0"
   }
 }
