--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,26 @@
 {
-  "extends": "./node_modules/@microsoft/rush-stack-compiler-4.7/includes/tsconfig-web.json",
-  "compilerOptions": {
-    "target": "es5",
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "jsx": "react",
-    "declaration": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "skipLibCheck": true,
-    "outDir": "lib",
-    "inlineSources": false,
-    "noImplicitAny": true,
+	"extends": "./node_modules/@microsoft/rush-stack-compiler-4.7/includes/tsconfig-web.json",
+	"compilerOptions": {
+		"target": "es5",
+		"forceConsistentCasingInFileNames": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"jsx": "react",
+		"declaration": true,
+		"sourceMap": true,
+		"experimentalDecorators": true,
+		"skipLibCheck": true,
+		"outDir": "lib",
+		"inlineSources": false,
+		"noImplicitAny": true,
 
-    "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules/@microsoft"
-    ],
-    "types": [
-      "webpack-env"
-    ],
-    "lib": [
-      "es5",
-      "dom",
-      "es2015.collection",
-      "es2015.promise"
-    ]
-  },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ]
+		"typeRoots": ["./node_modules/@types", "./node_modules/@microsoft"],
+		"types": ["webpack-env"],
+		"lib": ["es5", "dom", "es2015.collection", "es2015.promise"],
+		"baseUrl": ".",
+		"paths": {
+			"@vehiclesList/*": ["src/webparts/flotadminListaVehiculos/*"]
+		}
+	},
+	"include": ["src/**/*.ts", "src/**/*.tsx"]
 }
