--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "./node_modules/@microsoft/rush-stack-compiler-4.7/includes/tsconfig-web.json",
 	"compilerOptions": {
-		"target": "es5",
+		"strict": true,
+		"target": "ES2015",
 		"forceConsistentCasingInFileNames": true,
 		"module": "esnext",
 		"moduleResolution": "node",
@@ -13,13 +14,15 @@
 		"outDir": "lib",
 		"inlineSources": false,
 		"noImplicitAny": true,
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
 
 		"typeRoots": ["./node_modules/@types", "./node_modules/@microsoft"],
 		"types": ["webpack-env"],
-		"lib": ["es5", "dom", "es2015.collection", "es2015.promise"],
+		"lib": ["ES6", "dom", "es2015.collection", "es2015.promise"],
 		"baseUrl": ".",
 		"paths": {
-			"@vehiclesList/*": ["src/webparts/flotadminListaVehiculos/*"]
+			"@vehiclesList/*": ["src/webparts/flotadminVehiclesList/*"]
 		}
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx"]
