--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tslib": "2.3.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "@microsoft/eslint-config-spfx": "1.18.2",
     "@microsoft/eslint-plugin-spfx": "1.18.2",
     "@microsoft/rush-stack-compiler-4.7": "0.1.0",
@@ -36,10 +37,15 @@
     "@types/react-dom": "17.0.17",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
+    "autoprefixer": "^9.8.6",
     "eslint": "8.7.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "gulp": "4.0.2",
-    "typescript": "4.7.4",
-    "spfx-fast-serve-helpers": "~1.18.0"
+    "gulp-postcss": "^10.0.0",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "spfx-fast-serve-helpers": "~1.18.0",
+    "tailwindcss": "^1.9.6",
+    "typescript": "4.7.4"
   }
 }
