--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"postcss-cli": "^11.0.0",
 		"postcss-import": "^16.1.0",
 		"spfx-fast-serve-helpers": "~1.18.0",
-		"tailwindcss": "^1.9.6",
+		"tailwindcss": "3.4.13",
 		"typescript": "4.7.4",
 		"npm-run-all": "^4.1.5"
 	}
