--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-	"name": "flotadmin",
-	"version": "0.0.1",
-	"private": true,
-	"engines": {
-		"node": ">=16.13.0 <17.0.0 || >=18.17.1 <19.0.0"
-	},
-	"main": "lib/index.js",
-	"scripts": {
-		"build": "gulp bundle",
-		"build:ship": "gulp bundle --ship",
-		"clean": "gulp clean",
-		"test": "gulp test",
-		"bundle": "npm-run-all tailwindscss build",
-		"bundle:ship": "npm-run-all tailwindcss build:ship",
-		"webpack:serve": "fast-serve",
-		"serve": "npm-run-all -p tailwindcss:watch webpack:serve",
-		"tailwindcss": "tailwindcss -i ./assets/tailwind.css -o ./assets/dist/tailwind.css --minify --postcss ./postcss.config.js",
-		"tailwindcss:watch": "tailwindcss -i ./assets/tailwind.css -o ./assets/dist/tailwind.css --watch --minify --postcss ./postcss.config.js"
-	},
-	"dependencies": {
-		"@fluentui/react": "^8.106.4",
-		"@microsoft/sp-component-base": "1.18.2",
-		"@microsoft/sp-core-library": "1.18.2",
-		"@microsoft/sp-lodash-subset": "1.18.2",
-		"@microsoft/sp-office-ui-fabric-core": "1.18.2",
-		"@microsoft/sp-property-pane": "1.18.2",
-		"@microsoft/sp-webpart-base": "1.18.2",
-		"@pnp/spfx-property-controls": "3.18.0",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
-		"tslib": "2.3.1"
-	},
-	"devDependencies": {
-		"@fullhuman/postcss-purgecss": "^6.0.0",
-		"@microsoft/eslint-config-spfx": "1.18.2",
-		"@microsoft/eslint-plugin-spfx": "1.18.2",
-		"@microsoft/rush-stack-compiler-4.7": "0.1.0",
-		"@microsoft/sp-build-web": "1.18.2",
-		"@microsoft/sp-module-interfaces": "1.18.2",
-		"@rushstack/eslint-config": "2.5.1",
-		"@types/react": "17.0.45",
-		"@types/react-dom": "17.0.17",
-		"@types/webpack-env": "~1.15.2",
-		"ajv": "^6.12.5",
-		"autoprefixer": "^9.8.6",
-		"eslint": "8.7.0",
-		"eslint-plugin-react-hooks": "4.3.0",
-		"gulp": "4.0.2",
-		"gulp-postcss": "^10.0.0",
-		"postcss-cli": "^11.0.0",
-		"postcss-import": "^16.1.0",
-		"spfx-fast-serve-helpers": "~1.18.0",
-		"tailwindcss": "3.4.13",
-		"typescript": "4.7.4",
-		"npm-run-all": "^4.1.5"
-	}
+  "name": "flotadmin",
+  "version": "0.0.1",
+  "private": true,
+  "engines": {
+    "node": ">=16.13.0 <17.0.0 || >=18.17.1 <19.0.0"
+  },
+  "main": "lib/index.js",
+  "scripts": {
+    "build": "gulp bundle",
+    "build:ship": "gulp bundle --ship",
+    "clean": "gulp clean",
+    "test": "gulp test",
+    "bundle": "npm-run-all tailwindscss build",
+    "bundle:ship": "npm-run-all tailwindcss build:ship",
+    "webpack:serve": "fast-serve",
+    "serve": "npm-run-all -p tailwindcss:watch webpack:serve",
+    "tailwindcss": "tailwindcss -i ./assets/tailwind.css -o ./assets/dist/tailwind.css --minify --postcss ./postcss.config.js",
+    "tailwindcss:watch": "tailwindcss -i ./assets/tailwind.css -o ./assets/dist/tailwind.css --watch --minify --postcss ./postcss.config.js"
+  },
+  "dependencies": {
+    "@fluentui/react": "^8.106.4",
+    "@microsoft/sp-component-base": "1.18.2",
+    "@microsoft/sp-core-library": "1.18.2",
+    "@microsoft/sp-lodash-subset": "1.18.2",
+    "@microsoft/sp-office-ui-fabric-core": "1.18.2",
+    "@microsoft/sp-property-pane": "1.18.2",
+    "@microsoft/sp-webpart-base": "1.18.2",
+    "@pnp/spfx-property-controls": "3.18.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "tslib": "2.3.1"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "@microsoft/eslint-config-spfx": "1.18.2",
+    "@microsoft/eslint-plugin-spfx": "1.18.2",
+    "@microsoft/rush-stack-compiler-4.7": "0.1.0",
+    "@microsoft/sp-build-web": "1.18.2",
+    "@microsoft/sp-module-interfaces": "1.18.2",
+    "@rushstack/eslint-config": "2.5.1",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17",
+    "@types/webpack-env": "~1.15.2",
+    "ajv": "^6.12.5",
+    "autoprefixer": "^9.8.6",
+    "eslint": "8.7.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "gulp": "4.0.2",
+    "gulp-postcss": "^10.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "spfx-fast-serve-helpers": "~1.18.0",
+    "tailwindcss": "3.4.13",
+    "typescript": "4.7.4"
+  }
 }
