Add Intervention Types WebPart

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -4,7 +4,7 @@
     "solutionName": "Flotadmin",
     "componentType": "webpart",
     "template": "react",
-    "componentName": "flotadminFleetCardList",
+    "componentName": "flotadminInterventionTypesList",
     "plusBeta": false,
     "isCreatingSolution": false,
     "nodeVersion": "18.20.5",
