--- a/config/config.json
+++ b/config/config.json
@@ -32,6 +32,7 @@
 		"FlotadminVehiclesListWebPartStrings": "lib/webparts/flotadminVehiclesList/loc/{locale}.js",
 		"FlotadminFleetCardWebPartStrings": "lib/webparts/flotadminFleetCardList/loc/{locale}.js",
 		"FlotadminInterventionTypesListWebPartStrings": "lib/webparts/flotadminInterventionTypesList/loc/{locale}.js",
-		"PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js"
+		"PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js",
+        "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
 	}
 }
