--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@microsoft/sp-property-pane": "1.20.0",
     "@microsoft/sp-webpart-base": "1.20.0",
     "@pnp/graph": "^4.7.0",
-    "@pnp/sp": "^4.0.1",
     "@pnp/logging": "^4.0.1",
+    "@pnp/sp": "^4.0.1",
+    "@pnp/spfx-controls-react": "3.20.0",
     "@pnp/spfx-property-controls": "3.18.0",
+    "install": "0.13.0",
+    "npm": "11.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tslib": "2.3.1"
